[project]
name = "causaltarget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "chembl-webresource-client>=0.10.9",
    "dowhy>=0.14",
    "fastapi[standard]>=0.135.2",
    "matplotlib>=3.10",
    "meeko>=0.6",
    "notebook>=7.5.5",
    "numpy>=2.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "py3Dmol>=2.4",
    "rdkit>=2025.9.6",
    "requests>=2.32",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67",
    "typer>=0.15",
    "scipy>=1.14",
    "seaborn>=0.13",
    "scikit-learn>=1.6",
    "pyyaml>=6.0",
    "gymnasium>=1.0",
    "networkx>=3.0",
    "causal-learn>=0.1.3.8",
    "stable-baselines3>=2.7.1",
    "jinja2>=3.1",
    "pyvis>=0.3",
]

[project.optional-dependencies]
docking = ["vina>=1.2"]
rl = ["stable-baselines3>=2.0"]
mirror = ["fair-esm>=2.0"]

[project.scripts]
dockbot = "modules.dockbot.__main__:main"
genmol = "modules.genmol.__main__:main"
causalbiorl = "modules.causalbiorl.__main__:main"
mirrorfold = "modules.mirrorfold.__main__:main"
causaltarget = "modules.causal_target.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
